--- a/css/iRock_style.css
+++ b/css/iRock_style.css
@@ -1,24 +1,26 @@
 @import url('https://fonts.googleapis.com/css2?family=Bangers&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Tapestry&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Patua+One&display=swap');
+
 
 body {
 	background-color: brown;
 }
-
-
-
 .tittle1 {
 	font-family: 'Tapestry', cursive;
 	font-size: 35px;
 	color: yellow;
 }
-
 .tittle2 {
 	font-family: 'Bangers', cursive;
 	color: black;
 	font-size: 70px;
 }
-
-.img1 {
-	background-image:none !important;
+.bt1 {
+	font-family: 'Patua One', cursive;
+	background-color: #4CAF50;
+	border: 2px solid #000000;
+	padding: 5px 20px;
+	font-size: 15px;
+	border-radius: 5px;
 }
