--- a/css/iRock_style.css
+++ b/css/iRock_style.css
@@ -48,7 +48,7 @@ body {
 }
 
 #name {
-	margin-left: 23px;
+	margin-left: 1px;
 }
 
 .login1 {
@@ -79,4 +79,28 @@ body {
     -2px 1px 0 #000,
     2px -1px 0 #000,
     -2px -1px 0 #000;
+}
+
+#splash {
+	width: 100%;
+	height: 100%;
+	position: absolute;
+	background: violet;
+	display: flex;
+	flex-direction: column;
+	opacity: 1;
+	transition: opacity 1s;
+	top: 0;
+	left: 0;
+	justify-content: center;
+	align-items: center;
+}
+
+.logo {
+	width: 300px;
+	height: 300px;
+}
+
+#splash.fade {
+	opacity: 0;
 }
